--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,9 @@
   margin: 0;
   padding: 0;
 }
+body.loading {
+    /* overflow: hidden; */
+    height: 100vh;
+   
+}
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
