--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+    color:#353535;
+    background-color: #fffaf2;
+    @media screen and (max-width: 991px){
+        font-size: 1.2vw;
+        line-height: 1.3;
+    }
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+    width: 100%;
+    box-sizing: border-box;
+}
+html{
+    font-family: sans-serif;
+    -webkit-text-size-adjust: 100%;
+    height: 100%;
 }
